--- a/CleanAuthors.Net48/App.config
+++ b/CleanAuthors.Net48/App.config
@@ -2,10 +2,12 @@
 <configuration>
     <appSettings>
         <add key="Path" value="."/>
-        <add key="Masks" value="*.doc*;*.xls*"/>
+		<add key="Skip" value="
+        "/>
+		<add key="Masks" value="*.doc*;*.xls*"/>
         <add key="Subdirs" value ="0"/>
         <add key="ReadOnly" value ="0"/>
-        <add key="Log" value="logs"/>
+        <add key="Logs" value="logs"/>
     </appSettings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
