Update to .NET 8

--- a/CleanAuthors.Net48/App.config
+++ b/CleanAuthors.Net48/App.config
@@ -2,11 +2,12 @@
 <configuration>
     <appSettings>
         <add key="Path" value="."/>
-		<add key="Skip" value="
+        <add key="Skip" value="
         "/>
-		<add key="Masks" value="*.doc*;*.xls*"/>
+        <add key="Masks" value="*.doc*;*.xls*"/>
         <add key="Subdirs" value ="0"/>
         <add key="ReadOnly" value ="0"/>
+        <add key="LogToConsole" value="1"/>
         <add key="Logs" value="logs"/>
     </appSettings>
     <startup> 
