--- a/CleanProperties/appsettings.json
+++ b/CleanProperties/appsettings.json
@@ -18,7 +18,7 @@
     "RecurseSubdirectories": true,
     "RecurseSubdirectories.comment": "Рекурсивный обход всех вложенных подпапок (true/false)",
     "ScanDirs": [
-      "."
+      "D:\\Share\\T"
     ],
     "ScanDirs.comment": "Список корневых папок для сканирования (пути пишутся через \\ или /)",
     "//ScanDirs": [
