Workaround issue of .NET

--- a/CleanProperties/appsettings.json
+++ b/CleanProperties/appsettings.json
@@ -3,14 +3,10 @@
     "DebugLog": false,
     "DebugLog.comment": "Писать каждую папку для отладки (true) или пропускать лишнее (false)",
     "FileMasks": [
-      "*.doc",
-      "*.doc?",
-      "*.xls",
-      "*.xls?",
-      "*.dot",
-      "*.dot?",
-      "*.xlt",
-      "*.xlt?"
+      "?*.doc*",
+      "?*.xls*",
+      "?*.dot*",
+      "?*.xlt*"
     ],
     "FileMasks.comment": "Список масок файлов для сканирования в папках",
     "ProgressDelay": 1000,
@@ -32,7 +28,9 @@
     "SkipHiddenDirs": false,
     "SkipHiddenDirs.comment": "Пропускать скрытые папки (true/false)",
     "SkipReadOnlyFiles": false,
-    "SkipReadOnlyFiles.comment": "Пропускать файлы с защитой от записи (true/false)"
+    "SkipReadOnlyFiles.comment": "Пропускать файлы с защитой от записи (true/false)",
+    "NormalizeNames": true,
+    "NormalizeNames.comment": "Лечить встреченные дефективные имена папок и файлов (true/false), иначе могут быть сбои при сканировании"
   },
   "Cleaner": {
     "Clean": true,
