--- a/Diev.Extensions/Diev.Extensions.csproj
+++ b/Diev.Extensions/Diev.Extensions.csproj
@@ -6,11 +6,12 @@
     <Nullable>enable</Nullable>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <SupportedOSPlatformVersion>8.0</SupportedOSPlatformVersion>
+    <Version>8.2023.12.13</Version>
+    <Description>Diev's common helper extensions for local projects.</Description>
+    <Copyright>Copyright 2022-2023 Dmitrii Evdokimov</Copyright>
+    <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
+    <Company>diev</Company>
   </PropertyGroup>
-
-  <ItemGroup>
-    <Folder Include="Exec\" />
-  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="8.0.0" />
